--- a/wetube_review_one/src/views/watch.pug
+++ b/wetube_review_one/src/views/watch.pug
@@ -1,4 +1,5 @@
 extends base.pug
 
 block content
-    h1 Watch Video
+    h3 #{video.views===1 ? "view :" : "views :"} #{video.views} 
+    a(href=`${video.id}/edit`) Edit Video &rarr;
